<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14pt" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/buttonHMargin"
        android:layout_marginRight="@dimen/buttonHMargin"
        android:layout_marginTop="@dimen/VMargin"
        android:background="@color/confirmColor"
        android:onClick="loginMain"
        android:text="@string/button_login"
        android:textColor="@color/buttonText"
        android:textSize="12pt" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:text="@string/button_create_account"
        android:textColor="@color/buttonText"
        android:textSize="12pt"
        android:layout_marginLeft="@dimen/buttonHMargin"
        android:layout_marginRight="@dimen/buttonHMargin"
        android:layout_marginTop="@dimen/VMargin"
        android:background="@color/confirmColor" />

</LinearLayout>